src/crode/test/invalid/invalidCanvasSize.crode
canvas "InvalidCanvasSize" width 0 height 600 {
  let dot = circle {
    radius 5
    color black
  }

  draw dot at (100, 100)
}
